--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -3,29 +3,37 @@
 
 
 #def maincol()
-  <div id="page-wrap">
-    <div id="right-text">
-      <p>
-	<h3>Why 100 beds?</h3>  
-	Long-term recovery requires long-term solutions. The Haitian people have emergency needs now as H&ocirc;pital Sacr&eacute; Coeur has many patients still assigned to cots and stretchers for lack of hospital beds.  But many are long-term patients and will need physical therapy, rehabilitation, and surgeries, and additional medical conditions will result from lack of durable beds. Also, H&ocirc;pital Sacr&eacute; Coeur must expand to meet the needs of an increasing population. By sending more quality beds, nurses and doctors can ensure that patient recovery happens faster and meet the populations' needs.  Quality hospital beds are durable and, in the long run, are an economical investment into Haiti&#8217;s overall long-term recovery. 
-      </p>	
+<div id="page-wrap">
+	<h1>About 100 beds</h1>
+	<div id="right-text">
+		<h3>Why 100 beds?</h3>  
+		<p>
+			<b>Long-term recovery requires long-term solutions.</b> The Haitian people have emergency needs now as H&ocirc;pital Sacr&eacute; has many patients still assigned to cots and stretchers for lack of hospital beds.  But many are long-term patients and will need physical therapy, rehabilitation, and surgeries. Additional medical conditions will result from lack of durable beds. Also, <b>H&ocirc;pital Sacr&eacute; Coeur must expand</b> to meet the needs of an increasing population. By sending <b>more quality beds</b>, nurses and doctors can ensure that patient recovery <b>happens faster</b> and <b>meet the populations' needs</b>.  Quality hospital beds are durable and, in the long run, are an economical investment into Haiti's overall long-term recovery. 
+		</p>	
 
-      
-    </div> 
-    <div id="left">	
-      <h1>about 100 beds</h1>
-      
-      <h3>What is the campaign?</h3>
-      
+	</div> 
+	<div id="left-text">	
+		<h3>What is the campaign?</h3>
 
-      The 100 Beds for Haiti Campaign is made up of creative and passionate citizens, students, and professionals dedicated to improving health services in Haiti. 
-      <br />
-      <br />
-      Hundreds of thousands of displaced Haitians have relocated to Northern Haiti to escape the physical devastation of the January earthquake.  As Haiti&#8217;s largest and best functioning private hospital, the H&ocirc;pital Sacr&eacute; Coeur (HSC) currently has 73 permanent inpatient beds and the need for more quality hospital beds is overwhelming.   In partnership with HSC and the Center for the Rural Development of Milot (CRUDEM), we aim to raise $300,000 to purchase and deliver 100 hospital beds to meet this immediate need and support the sustainable, long-term recovery and development of Haiti.
-      <br />
-      <br />
+		<p>
+			The <b><u>100 Beds for Haiti Campaign</u></b> is made up of creative and passionate citizens, students, and professionals dedicated to improving health services in Haiti. 
+		</p>
+		<p>
+			Thousands of displaced Haitians have relocated to Northern Haiti to escape the physical devastation of the January earthquake.  As Haiti's largest and best functioning private hospital, the H&ocirc;pital Sacr&eacute; Coeur (HSC) is responding to this population change.  Prior to the earthquake, HSC had 73 permanent inpatient beds. Since the quake, the hospital has made emergency expansions to meet the inpatient needs of an additional 400+ patients.  In the months ahead, HSC plans to maintain a total bed count of 200, making <b>the need for more quality hospital beds overwhelming.</b>
+		</p>
+		<p>
+			In partnership with HSC and The CRUDEM Foundation, Inc. we aim to raise the money and resources to purchase and deliver 100 hospital beds to <b>meet this immediate need</b> and <b>support the sustainable, long-term recovery and development of Haiti.
+		</p>
+	</div>
+	
+	<!--
+	<div
+			<img class="top" src="/images/hosp_01.jpg" />
+			<img sclass="top" rc="/images/hosp_02.jpg" /> 
+			<img class="top" src="/images/hosp_03.jpg" />
+			<img class="top" src="/images/hosp_04.jpg" />
+	</div>
+	-->
 
-    </div>
-    
-  </div>
+</div>
 #end def
