--- a/views/partners.tmpl
+++ b/views/partners.tmpl
@@ -1,31 +1,75 @@
-#extends base
-#set $page_name = 'main'
-
-#def head()
-$suppress_right_col()
-#end def
+#extends base #set $page_name = 'main'
 
 #def maincol()
 
-<div id="page-wrap">
-  <div id="right">
-    <img class="top" src="/images/stats.jpg" />
-  </div>  
-  <h1>partners</h1>
-  <br />
-  <h3>H&ocirc;pital Sacr&eacute; Coeur and the CRUDEM Foundation </h3>
-  <p>
-    H&ocirc;pital Sacr&eacute; Coeur (HSC) is the largest private hospital in North Haiti. Located in Milot, outside the town of Cap-Haitien, the 73 bed hospital has provided service for 23 years. The Red Cross has called HSC the best hospital in the country. The CRUDEM (Center for the Rural Development of Milot) Foundation is a multifaceted mission dedicated to helping impoverished people in and around the village of Milot in Haiti, and works to support the HSC. As a 501c3 registered non-profit organization based in the United States, <b>all donations to CRUDEM through the 100 Beds for Haiti campaign are tax-deductible</b>.Please see the organization&#8217;s IRS letter of determination, audited financial statements and Tax ID number <a href="http://www.crudem.org/give/tax-info">here</a>.
-  </p>
-  <br />
-  <p>
-    ALL DONATIONS TO THE 100 BEDS FOR HAITI CAMPAIGN ARE EARMARKED FOR THIS PARTICULAR CAUSE AND WILL GO DIRECTLY TO THE ORGANIZATION.
-  </p>
-  <p><i>
-      Please learn more about our partners and their work by visiting their <a href="http://www.crudem.org" target="_blank"> website</a>, following them on <a href="http://www.facebook.com/CRUDEMHaiti" target="_blank">facebook</a> and on <a href="http://twitter.com/crudem_haiti" target="_blank">twitter</a>. 
-  </i></p>
-  <br />
-  <object width="400" height="300"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="400" height="300"></embed></object><p><a href="http://vimeo.com/5324039">H&ocirc;pital Sacr&eacute; Coeur</a> from <a href="http://vimeo.com/user1951858">Crudem Foundation</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+<div id="page-wrap"> 
+	<div class="header">
+		<h1>100 Beds&#0039; Partners</h1>
+	</div>
+	<div id="right"> 
+		<img src="/images/stats.jpg" /> 
+		<p class="center">
+			<i><small>*2008 statistics</small></i>
+		</p>
+	</div>
+	<div id="left">
+		<h3>H&ocirc;pital Sacr&eacute; Coeur and the CRUDEM Foundation </h3>
+		<p>
+			H&ocirc;pital Sacr&eacute; Coeur (HSC) is the largest private hospital
+			in North Haiti. Located in Milot, outside the town of Cap-Haitien, the
+			73 bed hospital has provided service for 23 years. The Red Cross has
+			called HSC the best hospital in the country. The CRUDEM (Center for the
+			Rural Development of Milot) Foundation's sole mission is the operation
+			and support of HSC. 
+		</p>	
+			
+		<p> 
+			As a 501c3 registered non-profit organization based
+			in the United States, <b>all donations to CRUDEM through the 100 Beds
+			for Haiti campaign are tax-deductible</b>.Please see the
+			organization&#8217;s IRS letter of determination, audited financial
+			statements and Tax ID number <ahref="http://www.crudem.org/give/tax-info">here</a>. 
+		</p>
+
+		<p> 
+			<i>
+				ALL DONATIONS TO THE 100 BEDS FOR HAITI CAMPAIGN ARE EARMARKED FOR THIS
+				PARTICULAR CAUSE AND WILL GO DIRECTLY TO THE ORGANIZATION. 
+			</i>
+		</p> 
+
+		<p>
+			<i>
+				Please learn more about our partners and their work by visiting their <a
+				href="http://www.crudem.org" target="_blank"> website</a>, following
+				them on <a href="http://www.facebook.com/CRUDEMHaiti"
+				target="_blank">facebook</a> and on <a
+				href="http://twitter.com/crudem_haiti" target="_blank">twitter</a>.
+			</i>
+		</p> 
+	</div>
+	<div class="footer">
+		<object width="400" height="300"><param
+			name="allowfullscreen" value="true" /><param name="allowscriptaccess"
+			value="always" /><param name="movie"
+			value="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.
+			com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&
+			amp;fullscreen=1" />
+			<embed
+				src="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com
+				&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;
+				fullscreen=1" type="application/x-shockwave-flash"
+				allowfullscreen="true" allowscriptaccess="always" width="400"
+				height="300">
+			</embed>
+		</object>
+		<p>
+			<a
+			href="http://vimeo.com/5324039">H&ocirc;pital Sacr&eacute; Coeur</a>
+			from <a href="http://vimeo.com/user1951858">Crudem Foundation</a> on <a
+			href="http://vimeo.com">Vimeo</a>.
+		</p>
+	</div>
 </div>
 
 #end def
