--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -2,59 +2,59 @@
 
 #def maincol()
 <div id="page-wrap">
-  <div id="right">
-    <br />
-    <h3>Talk with Us</h3>
-    <p>Got ideas? We want to hear them. 
-      <br />
-      Want to volunteer, help out, or partner up?
-      <br />
-      Let's talk! We want your ideas, passions, 
-      <br />
-      and commitments to help raise the money 
-      <br />
-      needed for this very real cause.
-    </p>
-    <br />
-    <div id="contact-area">
-      
-      <form method="post" action="/getinvolved/comment">
-	
-	<label for="name">Name:</label>
-	<input type="text" name="name" id="Name" />
-	<br />
-	<label for="email">Email:</label>
-	<input type="text" name="email" id="Email" />
-	<br />
-	<label for="message">Message:</label><br />
-	<textarea name="message" rows="10" cols="60" id="Message"></textarea>
-	<br />
-	<button type="submit" name="submit" class="submit-button"><img src="/images/check.png" alt="" /> Submit</button>
-      </form>
-      
-      <div style="clear: both;"></div>	
-      
-    </div>
-  </div>
-  <h1>get involved</h1>
-  <h3>Stay Connected</h3>
-  <p>
-    Stay connected to our campaign as we progress. 
-    <br />
-    Sign up to join our list-serv:
-  </p>
-  <br />
-  <form method="post" action="/getinvolved/signup">
-    <label for="Name">Name:</label>
-    <input type="text" name="name" id="name" />
-    
-    <label for="Email">Email:</label>
-    <input type="text" name="email" id="email" />
-    <br />
-    <button type="submit" name="submit" class="submit-button"><img src="images/check.png" alt="" /> Submit</button>
-  </form>
-  
-  <div style="clear: both;"></div>	
+	<h1>Get involved</h1>
+	<div id="right-text">
+		<h3>Talk with Us</h3>
+		<p>
+			Got ideas? We want to hear them. 
+		</p>
+		<p>
+			Want to volunteer, help out, or partner up?
+			Let's talk! We want your ideas, passions, 
+			and commitments to help raise the money 
+			needed for this very real cause.
+		</p>
+		
+		<div id="contact-area" class="right-col">
+
+			<form method="post" action="/getinvolved/comment">
+				<ul>
+					<li><h3><label for="name">Name:</label><h3></li>
+					<li><input type="text" name="name" id="Name" /></li>
+					<li><h3><label for="email">Email:</label></h3></li>
+					<li><input type="text" name="email" id="Email" /></li>
+					<li><h3><label for="message">Message:</label></h3></li>
+					<li><textarea name="message" rows="10" id="Message"></textarea></li>
+					<li><button type="submit" name="submit" class="submit-button"><img src="/images/check.png" alt="" /> Submit</button></li>
+				</ul>
+			</form>
+
+			<div style="clear: both;"></div>	
+
+		</div>
+	</div>
+
+	<div id="left-text">
+		<h3>Stay Connected</h3>
+		<p>
+			Stay connected to our campaign as we progress. 
+			<br />
+			Sign up to join our list-serv:
+		</p>
+		
+		<div id="contact-area" class="left-col">
+		<form method="post" action="/getinvolved/signup">
+			<ul>
+				<li><h3><label for="name">Name:</label><h3></li>
+				<li><input type="text" name="name" id="Name" /></li>
+				<li><h3><label for="email">Email:</label></h3></li>
+				<li><input type="text" name="email" id="Email" /></li>
+				<li><button type="submit" name="submit" class="submit-button"><img src="images/check.png" alt="" /> Submit</button></li>
+			</ul>
+		</form>
+	</div>
+
+	<div style="clear: both;"></div>	
 </div>
 
 </div>
